2002-06-26  Bart Schaefer  <schaefer@zsh.org>

	* 17357: Src/mkbltnmlst.sh: predefine autoloads for zsh emulation
	mode only, not sh/ksh/etc. modes.

2002-06-26  Sven Wischnowsky  <wischnow@zsh.org>

	* 17366: Completion/Base/Core/_main_complete,
	Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo,
	Doc/Zsh/mod_complist.yo, Src/Zle/compcore.c, Src/Zle/complist.c,
	Src/Zle/compresult.c: two new modes for menu selection:
	incremental search and interactive

2002-06-24  Peter Stephenson  <pws@csr.com>

	* 17361: Src/zle_hist.c: Be safer about NULL returns from
	quietgethist() in case the history has been changed under our feet.

	* 17360: Src/zle_hist.c: Allow accept-line-and-down-history to
	accept the line even if there is no more history.

	* 17350: Src/zle_params.c, Doc/Zsh/zle.yo: Add $CUTBUFFER and
	$killring zle parameters.

2002-06-22  Bart Schaefer  <schaefer@zsh.org>

	* users/5073: Completion/compdump: use `typeset +f' instead of
	`whence -w' to get names of completion functions.

2002-06-20  Peter Stephenson  <pws@csr.com>

	* 17334: Src/builtin.c, Src/options.c, Src/params.c, Src/zsh.h,
	Doc/Zsh/builtins.yo, Doc/Zsh/options.yo: add TYPESET_SILENT
	shell option and `typeset -p' option.

2002-06-17  Peter Stephenson  <pws@csr.com>

	* unposted: Config/version.mk, Completion/Unix/Command/.distfile,
	Doc/Zsh.distfiles, Functions/Zle/.distfiles: version 4.1.0-dev-5.

2002-06-14  Peter Stephenson  <pws@csr.com>

	* 17318: Src/hist.c: ${(z)...} appended an extra space when the
	lexical analyser failed.

2002-06-07  Peter Stephenson  <pws@csr.com>

	* 17304: Src/Zle/zle_main.c, Doc/Zsh/zle.yo: (suggested by Bart)
	tweak the tweaked tweak in 17301 so that zle -I returns status
	0 if zle display was successfully invalidated even if by a
	previous call to zle -I (user doesn't care). 

	* 17299: Src/builtin.c, Src/exec.c, Src/init.c, Src/parse.c,
	Src/text.c, Src/zsh.h: Instead of freeing Eprogs in one go
	at the top level, use reference counts.
