@@ -1,0 +1,3 @@
+#compdef -assign-parameter-
+
+_parameters -g "^*readonly*" -S ''
