@@ -1,3 +1,12 @@
+2002-07-01  Sven Wischnowsky  <wischnow@zsh.org>
+
+	* 17387: Completion/Zsh/Context/.distfiles,
+	Completion/Zsh/Context/_assign, Doc/Zsh/compsys.yo,
+	Doc/Zsh/compwid.yo, Src/zsh.h, Src/Zle/compcore.c,
+	Src/Zle/zle_tricky.c: add new sepcial context
+	-assign-parameter- for completing the parameter in an
+	assignment
+
 2002-06-26  Bart Schaefer  <schaefer@zsh.org>
 
 	* 17357: Src/mkbltnmlst.sh: predefine autoloads for zsh emulation
